test/fail_compilation/ice10727b.d
// REQUIRED_ARGS: -c
/*
TEST_OUTPUT:
---
fail_compilation/imports/foo10727b.d(27): Error: undefined identifier `Frop`
---
*/

import imports.foo10727b;
